--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ src/__pycache__/
 src/util/__pycache__/
 /venv/
 /.idea
+src/examples/avg_fitness.svg
+src/examples/Digraph.gv
+src/examples/Digraph.gv.svg
+src/examples/speciation.svg
